[package]
name = "pyo3-prost"
version = "0.1.0"
authors = ["Li-Hsing Liu <austin362667@gmail.com>"]
description = "Protocol Buffers compiler plugin for PyO3 Python binding compatible gRPC services powered by Prost! and Tonic"
repository = "https://github.com/austin362667/pyo3-prost"
homepage = "https://github.com/austin362667/pyo3-prost"
documentation = "https://docs.rs/pyo3-prost"
license = "Apache-2.0"
edition = "2021"
readme = "README.md"
keywords = ["protobuf", "serialization", "prost", "grpc", "tonic", "pyo3"]
categories = ["encoding"]
exclude = ["proto"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
heck = "0.4.0"
prettyplease = "0.2.9"
prost-build = { version = "0.12.3", default-features = false }
prost-types = { version = "0.12.3", default-features = false }
prost = { version = "0.12.3", default-features = false, features = ["std"] }
protoc-gen-prost = { version = "0.3.1" }
regex = { version = "1.5.5", default-features = false }
syn = { version = "2.0.22", features = ["parsing", "full"] }
tonic-build = { version = "0.11.0", features = [] }
pyo3 =  { version = "0.21.2", features = [ "extension-module", "multiple-pymethods" ] }

[profile.release]
codegen-units = 1
lto = "fat"
debug = true
